# pydanticTutorialUD

./: .gitignore
Lessons/: lesson_2.ipynb  lesson_3.ipynb  lesson_5.ipynb
pydanticforLLmEx/: 1pydanticLLMexercise.ipynb  2StructuredOutputPydantic.ipynb  3ApiCallDifferentLLM.ipynb  4Tool_calling_Pydantic_model_openai.ipynb  main.py  pyproject.toml
