[project]
name = "pydanticforllmex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.62.0",
    "email-validator>=2.0.0",
    "instructor>=1.10.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "nbformat>=5.0.0",
    "openai>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.6.2",
    "python-dotenv>=1.0.0",
]
